src/styles.scss
/* ... */
.table-header{
    min-width: 0;
    word-wrap: break-word;
    background-color: #fff;
    background-clip: border-box;
    border: 0px solid rgba(0,0,0,.125);
    border-radius: .25rem;
    box-shadow: none;
    margin-bottom: 0;

    .card-body {
        padding: 0.25rem 0.85rem;
    }
    &:hover{
        box-shadow: none;
    }
}

.table-header{
    .table{
        tr{
            border: 1px solid #d3d5d8;
            border-top: 0;
            border-right: 0;
            border-left: 0 !important;
            th{
                border: 0px solid #d3d5d8;
                color: #4b5056;
                padding: 10px 10px;
                font-family: 'Montserrat', sans-serif;
                font-weight: 600;
                font-size: 13px;
                &:first-child{
                    padding-left: 5px;
                }    
            }
        }
        td{
            border: 0px solid #d3d5d8;
            font-size: 13px;
            color: #67757c;
            padding: 3px 10px;
            font-family: 'Montserrat', sans-serif;
            font-weight: 500;
            vertical-align: middle;
            &:first-child{
                padding-left: 5px;
            }    
        }
        tbody{
            tr:nth-of-type(odd) {
                background: #f9fafe;
            }
        }
    }
    .data-table{
        border:1px solid #fff;
     .datatable-header {
        border-bottom: 1px solid hsl(216, 6%, 84%);
        margin-left:-13px;
            .datatable-header-cell{
                border: 0px solid #d3d5d8;
                color: #4b5056;
                padding: 0px 10px;
                font-family: 'Montserrat', sans-serif;
                font-weight: 600;
                font-size: 13px;
                &:first-child{
                 padding-left: 5px;
            }
            
        }
    }
}

.datatable-body{
    .datatable-body-row{
        border-bottom:1px solid #d3d5d8;
            .datatable-body-cell{
                border: 0px solid #d3d5d8;
                font-size: 13px;
                color: #67757c;
                padding: 3px 10px;
                font-family: 'Montserrat', sans-serif;
                    font-weight: 500;
                display: inline-block;
                vertical-align: top;
                line-height: 40px;
                &:first-child{
                    padding-left: 5px;
            }
       }
        
    }
       
}    
    .page-nav{
        border-bottom: 0 none !important;
        td{
            padding: 2px 0;
            .pagination-main {
                display: inline-block;
                margin-top: 5px;
            }
        }
    }
}

.pcoded{
    .pcoded-navbar{
        .pcoded-item{
            li{
                a{
                    font-size: 13px;
                }
            }
        }
    }
}

// modal scss //

.form-header{
    .form-group{
        margin-bottom: 10px;
        label{
            width:100%;
            margin-bottom: 3px;
            color: #231f20;
            font-weight: 600;
            font-family: 'Montserrat', sans-serif;
            font-size: 14px;
        }
    }
    .form-radio {
        position: relative;
        margin-top: 4px;
        margin-bottom: 15px;
    }
}
.img-circle{
    width: 40px;
    height: 40px;
}
.updatename{
    display: inherit;
    line-height:20px;
}
.updatedate{
    color: #bcc3d3;
    font-size: 12px;
    line-height: 20px;
    display: inherit;
}

.required{
   label{
    &:after {
        content: "*";
        color: #ff5370;
        margin-left: 2px;
        font-size: 12px;
    }
   }
}

 .required1{
     small{
        color: #ff5370;
        margin-left: 2px;
        font-size: 12px;
     }
 }

.company-logo{
    top: 22.5%;
    .custom-file{
        font-weight: normal;
        height: auto;
        cursor: pointer;
    }
    .custom-file-input{
        height: calc(3.5rem + 2px);
        cursor: pointer;
    }
}

.role-input{
    label{
        display: inline;
    }
    input{
        width:90% !important;
    }
}
.addrole-table{
    tbody{
        td{
            padding: 10px 10px !important;
        }
    }
}
.js-small{
    vertical-align: -webkit-baseline-middle;
    display: inline-flex;
}
.import-btn{
    background: #e8a820;
    border-color: #e8a820;
    &:hover{
        background: #e8a820;
        border-color: #e8a820;
    }
}
.export-btn{
    background: #8bb410;
    border-color: #8bb410;
    &:hover{
        background: #8bb410;
        border-color: #8bb410;
    }
}

// tenants //
.tenants-page{
    background: #fff;
    .form-group{
        margin-bottom: 9px;
       .form-control{
             padding: 0.275rem 0.75rem;
             width:90%;
             max-width:100%;
       }
       input{
           width:90% !important;
           max-width:100%;
       }
    }
    .input-group{
        width:90%; 
        margin-bottom: 0;
    }
    label{
        font-weight: bold;
    }
    // .dropdown-menu.show {
    //     top: -220px !important;
    // }
}
select.form-control:not([size]):not([multiple]){
    height: auto !important;
}
/* ... */

